# eye

./: .env.example  .gitignore  README.md  docker-compose.yml
.codex/: ARCHITECT_RULES.md  PROJECT_RULES.md  RELEASE_RULES.md  SECURITY_RULES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  (+1 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260616_0001_create_domain_analyses.py  20260617_0002_create_ip_analyses.py  20260617_0003_add_report_risk_payloads.py  20260617_0004_add_domain_intelligence_payload.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/routes/: domain.py  health.py  ip.py  reports.py
backend/app/core/: config.py  logging.py  responses.py
backend/app/db/: session.py
backend/app/models/: domain_analysis.py  ip_analysis.py
backend/app/repositories/: domain_analysis_repository.py  ip_analysis_repository.py  report_repository.py
backend/app/schemas/: domain.py  ip.py  report.py
backend/app/services/: crtsh_lookup.py  dns_lookup.py  domain_intelligence.py  domain_validation.py  email_security.py  intelligence_value.py  ip_intelligence.py  ip_network_enrichment.py  ip_risk_scoring.py  ip_summary.py  ip_validation.py  rdap_lookup.py  report_export.py  report_history.py  retry.py  reverse_dns_lookup.py  risk_scoring.py  summary.py  tls_inspection.py  web_security.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json
tests/: conftest.py
(+27 files in other folders)
