[project]
name = "eye-backend"
version = "0.1.0"
description = "Project Eye FastAPI backend foundation."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "dnspython>=2.7.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
